--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
+  "plugins": ["@typescript-eslint"],
   "extends": "next/core-web-vitals",
   "rules": {
-    "no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
