--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
