--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@honeybadger-io/nextjs": "^5.9.4",
+    "@honeybadger-io/react": "^6.1.23",
     "@vercel/analytics": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
