--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@honeybadger-io/nextjs": "^5.9.4",
     "@honeybadger-io/react": "^6.1.23",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
